--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -179,7 +179,7 @@ color:#fff;
 
 li.infolinks a {
 text-decoration:none;
-color:#FF0080;
+color:#BF5FFF;
 }
 li.infolinks a:hover {
 text-decoration:none;
@@ -387,7 +387,7 @@ text-align:center;
 }
 .sitemap {
 float:center;
-margin-left:33px;
+margin-left:66px;
 margin-top:0px;
 text-align:center;
 margin-bottom:0px;
@@ -1621,7 +1621,7 @@ font-size:19px;
 margin-left:8px;
 padding-left:8px;
 color:#00FF00;
-margin-bottom:0px;
+margin-bottom:11px;
 }
 .marketing_header101 {
 font-family: 'Open Sans', sans-serif;
@@ -1715,17 +1715,8 @@ margin-top:-33px;
 width:115px;}
 
 
-h1.marketing_header2 {
-font-family: 'Open Sans', sans-serif;
-font-weight:lighter;
-font-size:19px;
-padding-left:8px;
-padding-top:6px;
-padding-bottom:6px;
-color:#00FF00;
-background:#111;
-margin-bottom:12px;
-width:200px;}
+h1.marketing_header2 { font-family: 'Open Sans', sans-serif; font-weight:lighter; font-size:19px;padding-left:8px;padding-top:6px;padding-bottom:6px;color:#00FF00;background:#111;
+margin-bottom:12px;width:200px;}
 
 h1.marketing_header19 {
 font-family: 'Open Sans', sans-serif;
@@ -1773,6 +1764,12 @@ color:#00FF00;
 	color: #fff;
 text-decoration:none;
  color:#BF5FFF;
+
+}
+#templatemo_copyright a:hover {
+	color: #fff;
+text-decoration:none;
+ 
 
 }
 #templatemo_copyright a.greenlinked {
