--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -653,7 +653,7 @@ height:auto;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:30px;
-background-color:#ee00b2;
+background-color:rgba(238,0,178, 0.7);
       
 }
 
@@ -670,7 +670,7 @@ background-color:#ee00b2;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:60px;
-        background-color:#00B2EE;
+       background-color:rgba(238,0,178, 0.7);
 }
 
 #templatemo_content1  #site_marketing2 h1 {color:#fff;
@@ -686,7 +686,7 @@ background-color:#ee00b2;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:44px;
-          background:#00B2EE;
+          background-color:rgba(0,178,238,0.8);
 }
 
 #templatemo_content1 #site_marketing3 h1 {color:#fff;
@@ -699,13 +699,18 @@ background-color:#ee00b2;
 	float: right;
 	clear:both;
 	margin-top:28px;
+color:#fff;
 	margin-right:74px;
           background:#00ee3c;
+ text-shadow: 1px 1px 2px rgba(0,0,0,1);
 }
+
 
 #templatemo_content1  #site_marketing3 .button:hover {
 	float: right;
 	clear:both;
+text-shadow: 2px 2px 2px rgba(0,0,0,1);
+
 	margin-top:28px;
 	margin-right:74px;
           background:#00ee00;
