--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -659,7 +659,7 @@ background-color:rgba(238,0,178, 0.7);
 
 #templatemo_content1  .site_marketing_first h1 {color:#fff;
 	margin: 0;
-	font-size:17px;
+	font-size:19px;
 	padding: 0;
         text-shadow: 2px 2px 2px rgba(0,0,0,1);
 }
@@ -675,7 +675,7 @@ background-color:rgba(238,0,178, 0.7);
 
 #templatemo_content1  #site_marketing2 h1 {color:#fff;
 	margin: 0;
-	font-size:17px;
+	font-size:18px;
 	padding: 0;
         text-shadow: 2px 2px 2px rgba(0,0,0,1);
 }
@@ -685,13 +685,14 @@ background-color:rgba(238,0,178, 0.7);
 	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
-	margin-right:44px;
+	margin-right:42px;
           background-color:rgba(0,178,238,0.8);
 }
 
+
+
 #templatemo_content1 #site_marketing3 h1 {color:#fff;
 	margin: 0;
-	font-size:18px;
 	padding: 0;
         text-shadow: 2px 2px 2px rgba(0,0,0,1);
 }
@@ -700,25 +701,31 @@ background-color:rgba(238,0,178, 0.7);
 	clear:both;
 	margin-top:28px;
 color:#fff;
-	margin-right:74px;
+width:145px;
+font-size:16px;
+	margin-right:77px;
           background:#00ee3c;
  text-shadow: 1px 1px 2px rgba(0,0,0,1);
+background:#00ee00;
 }
 
+.italix {
+font-style:italic;
 
+}
 #templatemo_content1  #site_marketing3 .button:hover {
 	float: right;
 	clear:both;
 text-shadow: 2px 2px 2px rgba(0,0,0,1);
 
 	margin-top:28px;
-	margin-right:74px;
+	margin-right:77px;
           background:#00ee00;
 }
 
 #templatemo_content1  #site_marketing h1 {color:#fff;
 	margin: 0;
-	font-size:16px;
+	font-size:17px;
 	padding: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,1);
 }
@@ -732,9 +739,9 @@ text-shadow: 2px 2px 2px rgba(0,0,0,1);
 }
 
 #companylogo {
-width:410px;
-margin-left:50px;
-margin-top:13px;
+width:465px;
+margin-left:30px;
+margin-top:10px;
 }
 
 #part4 { display:inline-block; margin-right0px;margin-top:0px; margin-bottom:10px; margin-right:20px; float:left; width: 146px;
