--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -285,7 +285,7 @@ img.mfp-img {
 .mfp-title {
   text-align: left;
   line-height: 18px;
-  color: #BF5FFF;
+  color: #00B2EE;
 
   word-wrap: break-word;
   padding-right: 36px; }
