--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -280,7 +280,7 @@ color: #BF5FFF;
 }
 
 .brightp {
-color: #ffa500;
+color: #FF0080;
 }
 
 
@@ -549,7 +549,7 @@ margin-top:0px;
 	margin-top:-10px;
       z-index:100;
 	margin-left:77px;
-         background-color:rgba(0,178,238,0.5);
+         background-color:rgba(0,255,0,0.8);
 }
 
  #templatemo_content1  #site_title h1 {color:#fff;
@@ -605,7 +605,7 @@ height:1000px;
 /* Gallery Content */
 
 #templatemo_content69 {
-z-index:100;
+
 padding: 60px 30px;
 margin: 0 auto;
 height:1000px;
@@ -653,7 +653,7 @@ height:auto;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:30px;
-background-color:rgba(238,0,178, 0.7);
+background-color:rgba(0,178,238,0.8);
       
 }
 
@@ -670,7 +670,7 @@ background-color:rgba(238,0,178, 0.7);
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:60px;
-       background-color:rgba(238,0,178, 0.7);
+       background-color:rgba(0,178,238,0.8);
 }
 
 #templatemo_content1  #site_marketing2 h1 {color:#fff;
@@ -1021,7 +1021,7 @@ height:150px;
 background-color:#000;
 position:relative;
 z-index:0;
-margin-top:4000px;
+margin-top:4100px;
 }
 
 #content_filler75{
@@ -1093,7 +1093,7 @@ height:150px;
 background-color:#000;
 position:relative;
 z-index:0;
-margin-top:1350px;
+margin-top:1430px;
 }
 
 #cleanme {
@@ -1697,6 +1697,21 @@ margin-bottom:12px;
 width:370px;
 
 }
+
+.thank_you_title {
+
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+font-size:18px;
+padding-left:8px;
+color:#00FF00;
+background:#222;
+margin-left:22px;
+margin-bottom:12px;
+width:300px;
+
+}
+
 
 .contactp, .enjoyp {
 color:#00B2EE;
